change script tag location

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="library.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="book1">BOOK1</div>
-        <div class="book2">BOOK2</div>
-        <div class="book3">BOOK3</div>
-        <div class="book4">BOOK4</div>
+        <button id="addToShelf" >Add a Book</button>
+        <div class="shelf">
+        <div class="book1"><p>BOOK1</p></div>
+        <div class="book2"><p>BOOK2</p></div>
+        <div class="book3"><p>BOOK3</p></div>
+        <div class="book4"><p>BOOK4</p></div>
     </div>
-    
+    </div>
+    <script src="library.js"></script>
+
 </body>
 </html>
