--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <button id="addToShelf" >Add a Book</button>
         <div class="shelf">
-        <div class="book1"><p>BOOK1</p></div>
+        <!-- <div class="book1"><p>BOOK1</p></div>
         <div class="book2"><p>BOOK2</p></div>
         <div class="book3"><p>BOOK3</p></div>
-        <div class="book4"><p>BOOK4</p></div>
+        <div class="book4"><p>BOOK4</p></div> -->
     </div>
     </div>
     <script src="library.js"></script>
